FIX: Oprava orezu textu CTA - odstraneni text-overflow ellipsis

--- a/assets/css/onas.css
+++ b/assets/css/onas.css
@@ -375,8 +375,6 @@ h6 {
   margin-left: auto;
   margin-right: auto;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 @media (max-width: 960px) {
   .cta-text {
